<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dreamvu_pal_camera_description</name>
  <version>1.2.0</version>
  <description>
    <p>URDF Description package for DreamVu pal-camera</p>
    <p>This package contains configuration data, 3D models and launch files
for pal sensor</p>
  </description>
  <author>Arnoud Visser</author>
  <maintainer email="a.visser@uva.nl" />
  <license>Proprietary</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>gazebo</exec_depend>
  <export>
    <architecture_independent />
    <build_type>ament_cmake</build_type>
  </export>
</package>
